<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuscarLibroActivity">
    <TextView
        android:id="@+id/db_buscar_title"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/db_buscar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/db_buscar_info"
        android:layout_below="@id/db_buscar_title"
        android:text="@string/db_buscar_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_below="@id/db_buscar_info"
        android:id="@+id/db_buscar_rb_group"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/db_buscar_rb_titulo"
            android:text="@string/db_buscar_rb_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/db_buscar_rb_autor"
            android:text="@string/db_buscar_rb_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/db_buscar_rb_editorial"
            android:text="@string/db_buscar_rb_editorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/db_buscar_rlL"
        android:layout_below="@id/db_buscar_rb_group"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentTop="true"
            android:id="@+id/db_buscar_option"
            android:text="@string/db_buscar_rb_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/db_buscar_tf_buqueda"
            android:layout_below="@id/db_buscar_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/db_buscar_btn_buscar"
            android:layout_below="@id/db_buscar_tf_buqueda"
            android:layout_alignParentRight="true"
            android:minWidth="140dp"
            android:onClick="buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>




</RelativeLayout>