<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/main_title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/main_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="menuLibros"/>
        <Button
            android:layout_marginTop="20dp"
            android:text="@string/main_btn2"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_marginTop="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:minWidth="150dp"
        android:text="@string/main_btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="salir"/>

</RelativeLayout>